Centralizing business logic to services and controllers + separating model entities